--- a/index.html
+++ b/index.html
@@ -272,6 +272,18 @@
             </div>
         </div>
     </section>
+    <section class="technology-sec experience-sec music-sec">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="tech-txt">
+                        <h2>Bringing music to life in <span>Your Home</span></h2>
+                        <p>Designed for fun and easy learning, it features a built-in large screen with engaging online courses. Watch your kids play and learn together, turning piano practise into a delightful family bonding experience.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
