--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-6">
                     <div class="logo">
-                        <img src="img/logo.png" />
+                        <a href="#"><img src="img/logo.png" /></a>
                     </div>
                 </div>
                 <div class="col-lg-9 col-md-6 col-sm-6 col-6">
