--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
                             movements while playing the piano. By collecting and analyzing multi-dimensional real-time
                             data, including patterns and fingerings, FIND offers intelligent, data-driven teaching
                             assistance, elevating the learning experience to new heights.</p>
-                        <img src="img/ai.png" />
+                        <img src="img/ai.png" class="desktop-img" />
+                        <img src="img/ai-mob.png" class="mob-img" />
                     </div>
                 </div>
             </div>
