--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                     </div>
                 </div>
                 <div class="col-lg-7">
-                    <img class="piano-mob-img" src="img/painoworld.jpeg" alt="piano" />
                 </div>
             </div>
         </div>
-        <img class="piano-img" src="img/painoworld.jpeg" alt="piano" />
+        <img class="piano-mob-img" src="img/painoworld.png" alt="piano" />
+        <img class="piano-img" src="img/painoworld.png" alt="piano" />
     </section>
     <section class="gamified-sec">
         <div class="container">
@@ -155,11 +155,11 @@
                     <div class="tech-txt">
                         <h2>Fusing <span>technology</span> with <span>tradition</span> to elevate the art of Piano
                             playing.</h2>
-                        <img class="mob-img" src="img/bg-mob.png" />
                     </div>
                 </div>
             </div>
         </div>
+        <img class="mob-img" src="img/bg-mob.png" />
     </section>
 
     <section class="piano-sec">
@@ -222,7 +222,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 order-2 order-lg-1">
-                    <img class="find-img" src="img/find.jpeg" alt="find" />
+                    <img class="find-img desktop-img" src="img/find.jpeg" alt="find" />
                 </div>
                 <div class="col-lg-4 order-1 order-lg-2">
                     <div class="content-txt">
@@ -236,6 +236,7 @@
                 </div>
             </div>
         </div>
+        <img class="find-img mob-img" src="img/find.jpeg" alt="find" />
     </section>
     <section class="technology-sec experience-sec">
         <div class="container">
@@ -253,9 +254,11 @@
                 </div>
             </div>
         </div>
+        <img class="mob-img" src="img/experience-mob-bg.png" />
     </section>
     <section class="everyone-sec">
         <div class="container">
+            <h2>For <span>Everyone.</span></h2>
             <div class="row">
                 <div class="col-lg-3">
                     <div class="everyone-box">
@@ -305,11 +308,11 @@
                         <p>Designed for fun and easy learning, it features a built-in large screen with engaging online
                             courses. Watch your kids play and learn together, turning piano practise into a delightful
                             family bonding experience.</p>
-                        <img class="mob-img" src="img/music-mob.jpeg" />
                     </div>
                 </div>
             </div>
         </div>
+        <img class="mob-img" src="img/music-mob.jpeg" />
     </section>
     <section class="smart-piano-sec">
         <div class="container">
@@ -319,24 +322,20 @@
                     <div class="piano-slider">
                         <div class="owl-carousel">
                             <div class="item">
-                                <img src="img/piano1.png" alt="Image 1">
+                                <img src="img/piano1.png" alt="UF Series Smart Upright in Black">
                                 <h3>UF Series Smart Upright in Black</h3>
                             </div>
                             <div class="item">
-                                <img src="img/piano2.jpeg" alt="Image 2">
+                                <img src="img/piano2.jpeg" alt="GF Series Smart Grand in Black">
                                 <h3>GF Series Smart Grand in Black</h3>
                             </div>
                             <div class="item">
-                                <img src="img/piano3.jpeg" alt="Image 3">
+                                <img src="img/piano3.jpeg" alt="GF Series Smart Grand in White">
                                 <h3>GF Series Smart Grand in White</h3>
                             </div>
                             <div class="item">
-                                <img src="img/piano2.jpeg" alt="Image 2">
-                                <h3>GF Series Smart Grand in Black</h3>
-                            </div>
-                            <div class="item">
-                                <img src="img/piano3.jpeg" alt="Image 3">
-                                <h3>GF Series Smart Grand in White</h3>
+                                <img src="img/paino4.jpeg" alt="GF Series Smart Piano in Crystal">
+                                <h3>GF Series Smart Piano in Crystal</h3>
                             </div>
                         </div>
                     </div>
