--- a/index.html
+++ b/index.html
@@ -347,52 +347,74 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-2">
+                <div class="col-lg-2 w-20">
                     <div class="footer-col">
                         <h3>Pianos</h3>
                         <ul>
                             <li><a href="#">Kawai Grand Pianos</a></li>
                             <li><a href="#">Kawai Upright Pianos</a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li><a href="#">Kawai Digital Pianos</a></li>
+                            <li><a href="#">Kawai Pianos</a></li>
+                            <li><a href="#">Sauter Pianos</a></li>
+                            <li><a href="#">Fazioli Piano</a></li>
+                            <li><a href="#">Used Pianos</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 w-20">
                     <div class="footer-col">
+                        <h3>Services</h3>
                         <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li><a href="#">Piano Tuning</a></li>
+                            <li><a href="#">Piano Rental</a></li>
+                            <li><a href="#">Piano Repairs</a></li>
+                            <li><a href="#">Piano Removal</a></li>
+                            <li><a href="#">Finance & Payment</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 w-20">
                     <div class="footer-col">
+                        <h3>Account Information</h3>
                         <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li><a href="#">Cart</a></li>
+                            <li><a href="#">Checkout</a></li>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Forgot Password</a></li>
+                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="#">Returns & Refund Policy</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-2 w-20">
                     <div class="footer-col">
+                        <h3>Contact Us</h3>
                         <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li><a href="#">All Stores</a></li>
+                            <li><a href="#">Sydney Stores</a></li>
+                            <li><a href="#">Melbourne Store</a></li>
+                            <li><a href="#">Gold Coast Store</a></li>
                         </ul>
+                        <div class="social-icons">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4"></div>
+                <div class="col-lg-4 w-20">
+                    <div class="footer-col">
+                        <h3>Official WeChat</h3>
+                        <img src="img/qr.png" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="copyright-txt">
+                        <p>Copyright &copy; 2024 Australia Piano World</p>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
@@ -402,6 +424,10 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const headerHeight = document.querySelector('.header').offsetHeight;
+            document.body.style.paddingTop = headerHeight + 'px';
+        });
         jQuery(document).ready(function () {
             jQuery(".owl-carousel").owlCarousel({
                 items: 3,
