--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
         </div>
     </section>
     <section class="video-section">
-        <video autoplay muted loop class="video-banner">
-            <source src="img/video.mov" type="video/mp4">
-            <source src="img/video.mov" type="video/mov">
+        <video autoplay muted loop playsinline class="video-banner">
+            <source src="img/video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
@@ -178,7 +177,7 @@
                 </div>
             </div>
         </div>
-        <img class="desktop-img" src="img/tech-img.jpeg" />
+        <img class="desktop-img" src="img/tech-img.png" />
         <img src="img/mob-understand.png" class="mob-img" />
     </section>
 
@@ -326,7 +325,7 @@
                                 <h3>UF Series Smart Upright in Black</h3>
                             </div>
                             <div class="item">
-                                <img src="img/piano2.jpeg" alt="GF Series Smart Grand in Black">
+                                <img src="img/piano2.png" alt="GF Series Smart Grand in Black">
                                 <h3>GF Series Smart Grand in Black</h3>
                             </div>
                             <div class="item">
