--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 </div>
             </div>
         </div>
-        <img class="mob-img" src="img/music-mob.jpeg" />
+        <img class="mob-img" src="img/music-mob.png" />
     </section>
     <section class="smart-piano-sec">
         <div class="container">
