--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 <div class="col-lg-4 w-20">
                     <div class="footer-col">
                         <h3>Official WeChat</h3>
-                        <img src="img/qr.png" />
+                        <img class="qr-img" src="img/qr.png" />
                     </div>
                 </div>
             </div>
