--- a/index.html
+++ b/index.html
@@ -329,11 +329,11 @@
                                 <h3>GF Series Smart Grand in Black</h3>
                             </div>
                             <div class="item">
-                                <img src="img/piano3.jpeg" alt="GF Series Smart Grand in White">
+                                <img src="img/piano3.png" alt="GF Series Smart Grand in White">
                                 <h3>GF Series Smart Grand in White</h3>
                             </div>
                             <div class="item">
-                                <img src="img/paino4.jpeg" alt="GF Series Smart Piano in Crystal">
+                                <img src="img/paino4.png" alt="GF Series Smart Piano in Crystal">
                                 <h3>GF Series Smart Piano in Crystal</h3>
                             </div>
                         </div>
