--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 not only makes practice sessions more enjoyable but also significantly enhances note
                                 recognition and sight-reading skills. Ideal for pianists from beginner to intermediate
                                 levels, it's a fun, interactive way to accelerate your musical mastery. Embrace the fun
-                                in learning – your path to becoming a more proficient pianist starts here!'</p>
+                                in learning – your path to becoming a more proficient pianist starts here!</p>
                         </div>
                     </div>
                 </div>
