--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="tech-txt">
-                        <h2>Experience a symphony of emotions with FIND’s <span>Smart Pianos</span></h2>
+                        <h2>Experience a <span>symphony</span> of <span>emotions</span> with FIND’s Smart Pianos</h2>
                         <p>Where technology meets the heart of music. Imagine keys moving in harmony with quartets and
                             symphonies displayed on screen, creating a visual ballet of notes. The piano's soulful
                             8-inch silk film speaker, with its expansive 120 dB dynamic range and intricate 24-bit
