--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="tech-txt tech-title">
-                        <h2>Fusing <span>technology</span> with <span>tradition</span> to elevate the art of Piano
+                        <h2>"Fusing <span>technology</span>"" with <span>tradition</span> to elevate the art of Piano
                             playing.</h2>
                     </div>
                 </div>
