--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <p>Boasting a robust core and formidable computing capabilities, our system not only drives the
                             dynamic digital display but also powers the advanced AI functionality and beyond, ensuring
                             seamless performance across all features.</p>
-                        <img src="img/qaulcomm.jpg" />
+                        <img src="img/qaulcomm.jpg" data-aos-duration="1500" data-aos="zoom-in"/>
                     </div>
                 </div>
             </div>
