--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
             overlay.style.display = "none";
             popup.style.display = "none";
-            Cookies.set('popupDismissed', 'true', { expires: 7, path: '' });
+            Cookies.set('popupDismissed', 'true', { expires: 7, path: '/' });
         }
     </script>
 </body>
