--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <p>Australia Piano World is the sole dealer for FIND smart pianos and courses in Australia.
                 Unauthorized purchases mean no after-sale services, locked accounts, and inaccessible courses.
                 Safeguard your rights—buy from the authorized source, Australia Piano World.
-                Contact us for details. Thanks.</p>
+                <br/>Contact us for details. <br/>Thanks.</p>
                 <button class="btn btn-2 hover-slide-right" onclick="GotItPopup()">
                     <span>Got it</span>
                   </button>
